# server/service/shift/src/main/kotlin/com/portafolio/vientosdelsur/service/shift/ShiftService.kt
@@ -5,10 +5,11 @@ import com.f776.core.common.Result
 import com.portafolio.vientosdelsur.shared.dto.BaseResponseDto
 import com.portafolio.vientosdelsur.shared.dto.employee.EmployeeDto
 import com.portafolio.vientosdelsur.shared.dto.shift.EmployeeScheduleDto
+import com.portafolio.vientosdelsur.shared.dto.shift.ScheduleDto
 import kotlinx.datetime.LocalDate
 
 interface ShiftService {
     suspend fun getEmployeesWorkingOn(date: LocalDate): Result<BaseResponseDto<List<EmployeeDto>>, DataError.Remote>
-    suspend fun getMonthlyShiftsFor(employeeId: Int): Result<BaseResponseDto<EmployeeScheduleDto>, DataError.Remote>
-    suspend fun getMonthlyShifts(): Result<BaseResponseDto<Map<EmployeeDto.Get, EmployeeScheduleDto>>, DataError.Remote>
+    suspend fun getMonthlyShiftsFor(employeeId: Int): Result<BaseResponseDto<ScheduleDto>, DataError.Remote>
+    suspend fun getMonthlyShifts(): Result<BaseResponseDto<List<EmployeeScheduleDto>>, DataError.Remote>
 }
