# server/service/shift/src/main/kotlin/com/portafolio/vientosdelsur/service/shift/mapper/EmployeeScheduleMapper.kt
@@ -1,10 +1,10 @@
 package com.portafolio.vientosdelsur.service.shift.mapper
 
 import com.portafolio.vientosdelsur.domain.shift.model.EmployeeSchedule
-import com.portafolio.vientosdelsur.shared.dto.shift.EmployeeScheduleDto
+import com.portafolio.vientosdelsur.shared.dto.shift.ScheduleDto
 
 fun EmployeeSchedule.toEmployeeScheduleDto() =
-    EmployeeScheduleDto(
+    ScheduleDto(
         workingDays = workingDays.map { it.toShiftDateDto() },
         daysOff = daysOff
     )
