# shared/src/commonMain/kotlin/com/portafolio/vientosdelsur/shared/dto/shift/ScheduleDto.kt
@@ -1,11 +1,18 @@
 package com.portafolio.vientosdelsur.shared.dto.shift
 
+import com.portafolio.vientosdelsur.shared.dto.employee.EmployeeDto
 import com.portafolio.vientosdelsur.shared.dto.room.ShiftDateDto
 import kotlinx.datetime.LocalDate
 import kotlinx.serialization.Serializable
 
 @Serializable
-data class EmployeeScheduleDto(
+data class ScheduleDto(
     val workingDays: List<ShiftDateDto>,
     val daysOff: List<LocalDate>
+)
+
+@Serializable
+data class EmployeeScheduleDto(
+    val employeeDto: EmployeeDto.Get,
+    val scheduleDto: ScheduleDto
 )
